created user_handlers for help, star, feedback commands. Made readme.md. Ready for upload and manual testing

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-BOT_TOKEN = '123456789/*Y'
+BOT_TOKEN = 'Insert your tg-bot token here'
+GIS_TOKEN = 'Insert your gis token from https://openrouteservice.org here'
+YANDEX_GEOCODE_TOKEN = 'Insert your API key from https://developer.tech.yandex.ru here'
 DB_USER = 'db_user'
 DB_PASS = 'db_password'
 DB_NAME = 'db_name'
